test-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: v1
kind: Pod
metadata:
  name: test-identity-pod
  namespace: production
  labels:
    azure.workload.identity/use: "true"
spec:
  serviceAccountName: my-pod-storage-reader
  containers:
    - name: azure-cli-container
      image: mcr.microsoft.com/azure-cli
      command: ["/bin/sh", "-c", "sleep 3600"]
